# Electrons-Protons-GPU

./: .gitignore
CPU Version/: ElectronsProtonsCPU.sln
CPU Version/ElectronsProtonsCPU/: ElectronsProtonsCPU.vcxproj  ElectronsProtonsCPU.vcxproj.filters  config.h  fragmentShader.h  main.cpp  simulationCPU.cpp  simulationCPU.h  vertexShader.h
GPU Version/: GPU Version.sln
GPU Version/Dependencies/GLAD/src/: glad.c
GPU Version/GPU Version/: CMakeLists.txt  GPU Version.vcxproj  config.h  fieldShaders.h  guide.txt  kernel.cu  kernel.h  main.cpp  particleShaders.h  workspace.cu  workspace.cuh
GPU Version/GPU Version/dependencies/include/glad/: glad.h
